--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="center jumbotron">
+  <h1>Welcome to MyBookShelf</h1>
+
+  <h2>Keep track of your favorite books and discover new ones</h2>
+
+  <%= link_to "Sign Up", "#", class: "btn btn-lg btn-primary" %>  
+</div>
