Link to signup page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,5 +3,5 @@
 
   <h2>Keep track of your favorite books and discover new ones</h2>
 
-  <%= link_to "Sign Up", "#", class: "btn btn-lg btn-primary" %>  
+  <%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>  
 </div>
