--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,8 @@
 <h1>Welcome to MyBookShelf</h1>
+<#% binding.pry %>
+
+<%= render 'sessions/login' %>
 
 <h2>Keep track of your favorite books and discover new ones</h2>
 
-<%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>  
+<%= link_to "Sign Up", signup_path %>  
