--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Welcome to MyBookShelf</h1>
-<#% binding.pry %>
 
-<%= render 'sessions/login' %>
+<%= render '/sessions/login' %>
+<%= flash[:notice] %>
 
 <h2>Keep track of your favorite books and discover new ones</h2>
 
