--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,17 +15,17 @@
   </div>
   <% end %>
 
-  <%= f.label :username %>
-  <%= f.text_field :username %>
+  <%#= f.label :username %>
+  <%= f.text_field :username, placeholder: "Username" %>
 
-  <%= f.label :email %>
-  <%= f.text_field :email %>
+  <%#= f.label :email %>
+  <%= f.text_field :email, placeholder: "Email" %>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+  <%#= f.label :password %>
+  <%= f.password_field :password , placeholder: "Password"%>
 
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+  <%#= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation, placeholder: "Confirm Password" %>
 
   <%= f.submit "Sign Up" %>
 <% end %>
