--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -14,7 +14,18 @@
 }
 
 .login-form {
+  color:  rgb(26, 31, 31);
   float: right;
   font-size: 14px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.center {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.tagline {
+  letter-spacing: -1px;
+  margin-top: 20px;
 }
