--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<% if current_user %>
+  <h1>My Books</h1>
+<% else %>
+  <h1>Browse Books</h1>
+<% end %>
+
+<ul>
+  <% @books.each do |book| %>
+    <li><%= link_to book.name,  book_path %></li>
+  <% end %>
+</ul>
