--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -2,8 +2,14 @@
   <%= f.label :name %>
   <%= f.text_field :name %><br>
 
-  <%= f.label :author %>
-  <%= f.text_field :author %><br>
+  <%= f.label :author_name %>
+  <%= f.text_field :author_name, list: "authors_autocomplete" %>
+    <datalist id="authors_autocomplete">
+      <% Author.all.each do |author| %>
+        <option value="<%= author.name%>">
+      <% end %>
+    </datalist>
+  <br>
 
   <%= fields_for :ratings do |rating| %>
     <%= rating.label :stars %>
