--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @book do |f| %>
+<%= form_for [@user, @book] do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %><br>
 
@@ -12,10 +12,6 @@
   <br>
 
   <%= fields_for :ratings do |rating| %>
-
-    <%= rating.hidden_field :user_id, current_user.id %>
-
-    <%= rating.hidden_field :book_id, @book.id %>
 
     <%= rating.label :stars %>
     <%= rating.number_field :stars %><br>
