--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,6 +9,9 @@
 
 <ul>
   <% @books.each do |book| %>
-    <li><%= link_to book.name, book_path %></li>
+    <li><%= link_to book.name, book_path(book) %></li>
   <% end %>
 </ul>
+
+
+
