--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Authors#show</h1>
-<p>Find me in app/views/authors/show.html.erb</p>
+<h1><%= @author.name %></h1>
+<h3>Books</h3>
+<ul>
+  <% @author.books.each do |book| %>
+    <li><%= link_to book.name, book_path(book) %></li>
+  <% end %>
+</ul>
