--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h1><%= @book.name %></h1>
+<h3>By: <%= link_to @book.author_name, author_path(@book.author) %></h3><br>
+<h4>Genres:</h4>
+<ul>
+  <% @book.genres.each do |g| %>
+    <li><%= g.name %></li>
+  <% end %>
+</ul>
