--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,46 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.scrolling-wrapper {
+  overflow-x: scroll;
+  overflow-y: auto;
+  white-space: nowrap;
+  position: relative;
+  z-index: 1;
+
+  .card {
+    display: inline-block;
+    border-right: 1px solid lightgrey;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    position: relative;  
+    z-index: 1;
+
+  }
+}
+
+img {
+  position: relative;
+  margin-top: -90px;
+}
+
+// .dropdown {
+//   position: relative;
+//   display: inline-block;
+//   z-index: 999;
+// }
+
+// .dropdown-content {
+//   display: none;
+//   position: absolute;
+//   background-color: #f9f9f9;
+//   min-width: 160px;
+//   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+//   padding: 12px 16px;
+//   z-index: 999;
+// }
+
+// .dropdown:hover .dropdown-content {
+//   display: block;
+// }
