--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,13 @@
   </head>
 
   <body>
-  <% unless current_page?(root_path) %>
+  <% unless current_page?(root_path) || current_page?(signup_path) %>
     <header class="navbar navbar-fixed-top navbar-inverse">
         <div class="container">
-          <%= link_to "MyBookShelf", '#', id: "logo" %>
+          <%= link_to "MyBookShelf", user_path(current_user), id: "logo" %>
           <nav>
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Home", user_path(current_user) %></li>
-              <li><%= link_to "My Books", user_books_path(current_user) %></li>
               <li><%= link_to "Browse Books", "#" %></li>
               <li><%= link_to "Log out", '#' %></li>
             </ul>
