Fill out Genre show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           <nav>
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Home", user_path(current_user) %></li>
-              <li><%= link_to "Browse Books", "#" %></li>
+              <li><%= link_to "Browse Books", books_path %></li>
               <li><%= link_to "Log out", '#' %></li>
             </ul>
           </nav>
