--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Ratings#new</h1>
-<p>Find me in app/views/ratings/new.html.erb</p>
+<h1>Add '<%= @book.name %>' to MyBooks?</h1>
+<%= form_for @rating do |f| %>
+  <%= f.hidden_field :user_id, value: @user.id %>
+  <%= f.hidden_field :book_id, value: @book.id %>
+  <%= f.label :stars %>
+  <%= f.number_field :stars %>
+  <%= f.submit "Add to MyBooks" %>
+<% end %>
+<br></br>
+  <%= link_to "Back", url_for(:back), class: "btn btn-primary" %>
