--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Authors#index</h1>
-<p>Find me in app/views/authors/index.html.erb</p>
+<h1>Authors</h1>
+<ul>
+  <% @authors.each do |a| %>
+    <li><%= link_to a.name, author_path(a) %></li>
+  <% end %>
+</ul>
