--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -3,5 +3,8 @@
 <ul>
   <% @books.each do |book| %>
     <li><%= link_to book.name, book_path(book) %> by: <%= link_to book.author_name, author_path(book.author) %></li>
+    <%= render partial: "books/add_book", locals: { book: book } %><br></br>
   <% end %>
+        
+
 </ul>
