Allow user to add book from Author show page

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -3,5 +3,6 @@
 <ul>
   <% @author.books.each do |book| %>
     <li><%= link_to book.name, book_path(book) %></li>
+    <%= render partial: "books/add_book", locals: { book: book } %><br></br>
   <% end %>
 </ul>
