--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,18 +17,17 @@
           <nav>
             <ul class="navbar nav navbar-nav navbar-right">
               <li><%= link_to "Home", user_path(current_user) %></li>
-              <li class="dropdown">
 
+              <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Browse
                 <span class="caret"></span></a>
-
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Books", books_path %></li>
+                  <li><%= link_to "All Books", books_path %></li>
                   <li><%= link_to "Authors", authors_path %></li>
                   <li><%= link_to "Genres", genres_path %></li>
                 </ul>
-
               </li>
+
               <li><%= link_to "Log out", '#' %></li>
             </ul>
           </nav>
