Allow user to log in with github

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,6 +23,8 @@
     <br></br>
 
     <%= link_to "Sign Up", signup_path, class: "btn-lg btn-primary" %> 
+
+    <%= link_to "Log in with Github", "/auth/github", class: "btn-lg btn-primary" %>
 </div>
  
 
