--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                 </ul>
               </li>
 
-              <li><%= link_to "Log out", '#' %></li>
+              <li><%= link_to "Log out", logout_path, method: :delete %></li>
             </ul>
           </nav>
         </div>
