Add page authorization

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,6 +16,8 @@
 
 <div class="center">
     <%= flash[:notice] %>
+    <%= flash[:danger] %>
+    
     <h1 class="">Welcome to MyBookShelf</h1>
 
     <h3 class="tagline">Keep track of your favorite books and discover new ones</h3> 
