--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Sign up</h1>
 
-<%= render 'form' %>
+<%= render 'form' %><br></br>
 
+<%= link_to "Back to login page", root_path, class: "btn btn-primary" %>
 
