--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,31 +10,36 @@
   </head>
 
   <body>
-  <% unless current_page?(root_path) || current_page?(signup_path) %>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-        <div class="container">
-          <%= link_to "MyBookShelf", user_path(current_user), id: "logo" %>
-          <nav>
-            <ul class="navbar nav navbar-nav navbar-right">
-              <li><%= link_to "Home", user_path(current_user) %></li>
+    <% if current_user %>
 
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Browse
-                <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "All Books", books_path %></li>
-                  <li><%= link_to "Authors", authors_path %></li>
-                  <li><%= link_to "Genres", genres_path %></li>
+      <% unless current_page?(root_path) || current_page?(signup_path) %>
+        <header class="navbar navbar-fixed-top navbar-inverse">
+            <div class="container">
+              <%= link_to "MyBookShelf", "#", id: "logo" %>
+              <nav>
+                <ul class="navbar nav navbar-nav navbar-right">
+                  <li><%= link_to "Home", user_path(current_user) %></li>
+
+                  <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Browse
+                    <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><%= link_to "All Books", books_path %></li>
+                      <li><%= link_to "Authors", authors_path %></li>
+                      <li><%= link_to "Genres", genres_path %></li>
+                    </ul>
+                  </li>
+
+                  <li><%= link_to "Log out", logout_path, method: :delete %></li>
                 </ul>
-              </li>
+            
+              </nav>
+      <% end %>
+    <% end %>
 
-              <li><%= link_to "Log out", logout_path, method: :delete %></li>
-            </ul>
-          </nav>
-        </div>
-    </header>
+            </div>
+        </header>
 
-  <% end %>
     <div class="container">
       <%= yield %>
     </div>
