--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,9 +24,12 @@
 
     <br></br>
 
-    <%= link_to "Sign Up", signup_path, class: "btn-lg btn-primary" %> 
+    <%= link_to "Sign Up", signup_path, class: "btn-lg btn-primary" %><br></br>
 
-    <%= link_to "Log in with Github", "/auth/github", class: "btn-lg btn-primary" %>
+    <h4>Or</h4><br>
+
+    <%= link_to "Log in with Github", "/auth/github", class: "btn-lg btn-primary", style: "background-color:#660066
+" %>
 </div>
  
 
