--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
+<div class="center">
 <h1>Sign up</h1>
 
 <%= render 'form' %><br></br>
 
-<%= link_to "Back to login page", root_path, class: "btn btn-primary" %>
-
+<%= link_to "Back to login page", root_path, class: "btn btn-default" %>
+</div>
