--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,7 @@
 <h4>Genres:</h4>
 <ul>
   <% @book.genres.each do |g| %>
-    <li><%= g.name %></li>
+    <li><%= link_to g.name, genre_path(g) %></li>
   <% end %>
 </ul>
 
