--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,14 +14,18 @@
           </ul>
         </li>
         <li>Average User Rating: <%= pluralize(book.average_star_rating, 'star') %></li>
+        <% if current_user.books.include?(book) %>
+          <li>My Rating: <%= pluralize(book.ratings.where(user_id: current_user.id).pluck(:stars)[0], 'star') %></li>
+        <% end %>
       </ul>
-
-
-    </li>
-    <br></br>
-    
+    </li>    
   <% end %>
 </ol>
+<br></br>
+<h3>Don't see the book you're looking for?</h3>
+<%= link_to "Create New Book", new_book_path, class:"btn btn-primary"%>
+<br></br>
+
 
 
 
