--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,20 @@
 <%= form_for [@user, @book] do |f| %>
+
+  <% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@book.errors.count, "error") %>
+      prohibited this book from being saved:
+    </h2>
+
+    <ul>
+    <% @book.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+  <% end %>
+
   <%= f.label :name %>
   <%= f.text_field :name %><br>
 
