--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,4 +9,13 @@
       <li><%= link_to g.name, genre_path(g) %></li>
     <% end %>
   </ul>
-<%= render partial: "books/add_book", locals: { book: @book } %><br></br>
+
+  <% if !current_user.books.include?(Book.find_by(id: @book.id)) %>
+    <%= link_to "Add to MyBooks", {:controller => "ratings", :action => "new", :book_id => @book.id, :user_id => session[:user_id]}, class: "btn btn-primary" %>
+  <% else %>
+    <%= link_to "Edit My Rating", "#", class: "btn btn-warning" %>  
+    <%= link_to "Delete My Rating", "#", class: "btn btn-danger" %>
+  <% end %>  
+
+
+<%#= render partial: "books/add_book", locals: { book: @book } %><br></br>
