--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -1,11 +1,8 @@
-<h1>Add '<%= @book.name %>' to MyBooks?</h1>
-
-<%= form_for @rating do |f| %>
+<%= form_for rating do |f| %>
   <%= f.hidden_field :user_id, value: @user.id %>
   <%= f.hidden_field :book_id, value: @book.id %>
   <%= f.label :stars %>
   <%= f.number_field :stars %>
   <%= f.submit "Add to MyBooks" %>
 <% end %>
-
-<br></br>  <%= link_to "Back", url_for(:back), class: "btn btn-primary" %>
+<br></br>
