--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,18 @@
   </head>
 
   <body>
-    <% if current_user %>
+    <%# if current_user %>
 
-      <% unless current_page?(root_path) || current_page?(signup_path) %>
         <header class="navbar navbar-fixed-top navbar-inverse">
             <div class="container">
               <%= link_to "MyBookShelf", "#", id: "logo" %>
               <nav>
                 <ul class="navbar nav navbar-nav navbar-right">
+                <% if current_page?(root_path) %>
+                    <%= render '/sessions/login_form' %>
+
+                <% elsif !current_page?(root_path) && !current_page?(signup_path) %>
+
                   <li><%= link_to "Home", user_path(current_user) %></li>
 
                   <li class="dropdown">
@@ -31,11 +35,12 @@
                   </li>
 
                   <li><%= link_to "Log out", logout_path, method: :delete %></li>
+                  <% end %>
+
                 </ul>
             
               </nav>
-      <% end %>
-    <% end %>
+    <%# end %>
 
             </div>
         </header>
