--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,10 +19,15 @@
   <% end %>  
 
   <h4>Other User Ratings</h4>
+
+<div class="ratings-grid">
   <div id="prev" class="ratings-list btn btn-primary btn-sm">&lt</div>
 
   <div id="list" class="ratings-list"></div>
+  
+  <div id="next" class="ratings-list btn btn-primary btn-sm">&gt</div>  
+</div>
 
-  <div id="next" class="ratings-list btn btn-primary btn-sm">&gt</div>
+  
 
 
