--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,14 +13,14 @@
 
   <% if !current_user.books.include?(Book.find_by(id: @book.id)) %>
     <div id="rate-book" class="btn btn-primary">Rate Book</div><br></br>
-    <div id="rating-form" style="display:none">
-      <%= form_for Rating.new do |f| %>
+    <div id="rating-form" >
+      <%= form_for @rating do |f| %>
 
         <%= f.hidden_field :user_id, value: session[:user_id] %>
         <%= f.hidden_field :book_id, value: @book.id %>
         <%= f.label :stars %>
         <%= f.number_field :stars, in: 1..5 %>
-        <%= f.submit "Add to MyBooks" %>
+        <%= f.submit "Submit" %>
       <% end %>
     </div>
     <%
@@ -28,9 +28,15 @@
  <%= link_to "Add to MyBooks", {:controller => "ratings", :action => "new", :book_id => @book.id, :user_id => session[:user_id]}, class: "btn btn-primary" %> 
 <%
 =end%>
-  <% else %>
-    <%= link_to "Edit My Rating", edit_rating_path(@rating), class: "btn btn-warning" %>  
-    <%= link_to "Delete My Rating", rating_path(@rating), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+  <%
+=begin%>
+ <% else %>
+    
+ <%= link_to "Edit My Rating", edit_rating_path(@rating), class: "btn btn-warning" %>   
+
+    <%= link_to "Delete My Rating", rating_path(@rating), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %> 
+<%
+=end%>
   <% end %>  
 
   <h4>Other User Ratings</h4>
