--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -7,22 +7,20 @@
   overflow-y: auto;
   white-space: nowrap;
   position: relative;
-  z-index: 1;
 
   .card {
     display: inline-block;
     border-right: 1px solid lightgrey;
-    padding-right: 10px;
+    padding-right: 10%;
     padding-bottom: 10px;
     position: relative;  
-    z-index: 1;
 
   }
 }
 
 img {
   position: relative;
-  margin-top: -90px;
+  float: left;
 }
 
 .ratings-list {
@@ -38,7 +36,4 @@ img {
   justify-items: center;
   align-items: start;
 }
-
-
-
 
