Sort book index by avg rating

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,6 +5,8 @@
   <h1>All Books</h1>
 <% end %>
 
+<button id="sort-button">Sort by Average user rating</button>
+
 <ol>
   <% @books.each do |book| %>
     <div class="book_list">
